# english-with-sasha

./: Makefile  README.md  pyproject.toml
core/: app.py
core/static/css/: fonts.css  reset.css  styles.css
core/templates/: base.html  index.html
